@@ -1,5 +1,6 @@
 from 1.8.5 to 1.8.6
 - fixed missing resolv.h detect for some cases
+- srv resolver now can have plugins too
 
 from 1.8.4 to 1.8.5
 - more complete work on srv class
